Fix spacing between "Set Up Syncing" and spinner

--- a/scss/preferences/_sync.scss
+++ b/scss/preferences/_sync.scss
@@ -37,7 +37,7 @@
 {
 	width: 20px;
 	height: 20px;
-	margin-left: -1px;
+	margin-inline-start: 7px;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
